--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,9 @@
   "private": true,
   "modules-folder": "plugin",
   "dependencies": {
+      "nunjucks": "*",
+      "font-awesome": "*",
+      "jquery": "*",
       "bootstrap": "*"
   }
 }
