--- a/jingle-contracts/package.json
+++ b/jingle-contracts/package.json
@@ -23,6 +23,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-bignumber": "^2.0.2",
     "debug": "3.0.1",
+    "es6-promisify": "^6.0.0",
     "eth-gas-reporter": "^0.1.1",
     "ethereumjs-abi": "^0.6.5",
     "keccak": "^1.4.0",
@@ -31,5 +32,16 @@
     "truffle-hdwallet-provider": "^0.0.3",
     "web3": "0.20.1",
     "zeppelin-solidity": "1.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
   }
 }
