--- a/jingle-contracts/package.json
+++ b/jingle-contracts/package.json
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/ProjectOpenSea/opensea-contracts.git"
   },
-  "author": "",
+  "author": "Nate Oden",
   "contributors": [
     "Elena Nadolinski <elena@vt.edu> (https://github.com/leanthebean)",
     "Devin Finzer <devin.finzer@joinozone.com> (https://github.com/dfinzer)",
@@ -42,6 +42,6 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-register": "^6.22.0"
   }
 }
