Jingle contract test API, profile page, jingle page navigation changes

--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
       "nunjucks": "*",
       "font-awesome": "*",
       "jquery": "*",
-      "bootstrap": "*"
+      "bootstrap": "*",
+      "async": "*"
   }
 }
