--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Decentralized Music Composition",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "rebuild": "bash bin/rebuild.sh"
   },
   "author": "Jinglers",
   "license": "MIT",
