--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Jingle",
+  "name": "Motif",
   "version": "0.0.1",
   "description": "Decentralized Music Composition",
   "scripts": {
@@ -43,6 +43,6 @@
     "truffle": "^4.1.8",
     "truffle-hdwallet-provider": "0.0.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "zeppelin-solidity": "1.6.0"
+    "zeppelin-solidity": "^1.9.0"
   }
 }
